Eforce - Personal Dev/src/objects/MyProduct__c.object
<CustomObject>
    <fields>
        <fullName>Active_From__c</fullName>
        <description>Indicates Active Stating date of Product</description>
        <label>Active From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_To__c</fullName>
        <description>Indicates Active End date of a product</description>
        <label>Active To</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Product is active or not?</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Franchise__c</fullName>
        <label>Franchise</label>
        <picklist>
            <controllingField>MDD__c</controllingField>
            <picklistValues>
                <fullName>01_7904 Ethicon Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01_7917 Womens Health &amp; Urology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01_0328 Wound Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01_0470 Mentor Products</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MDD__c</fullName>
        <label>MDD</label>
        <picklist>
            <picklistValues>
                <fullName>General Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Surgery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Major_Group__c</fullName>
        <label>Major Group</label>
        <picklist>
            <controllingField>Sub_Franchise__c</controllingField>
            <picklistValues>
                <fullName>03_0500 Sutures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03_0512 Total Topical Skin Adhesives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03_7903 Total Hernia Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03_7974 Closed Wound Drains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03_0581 Adhesion Prevention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03_1315 Continence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03_7911 Thermachoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03_7983 Uterine Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03_0525 Wound Mangement - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03_7575 Topical Absorbable Hemostasis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03_0470 Breast Aesthetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03_0475 Body Contouring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03_0477 Facial Aesthetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03_0480 Other Aesthetics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minor_Group__c</fullName>
        <label>Minor Group</label>
        <picklist>
            <controllingField>Major_Group__c</controllingField>
            <picklistValues>
                <fullName>04_0642 Sutures Absorbable - Gut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_0643 Sutures Absorbable - PDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_0644 Sutures Absorbable-Vicryl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_0645 Sutures Absorbable-Vicryl Rapid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_0646 Sutures Absorbable-Monocryl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_0650 SuturesNon-Absorb-Ethibond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_0651 SuturesNon-Absorb-Ethilon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_0652 SuturesNon-Absorb-Mersilene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_0653 SuturesNon-Absorb-Prolene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_0654 SuturesNon-Absorb-Silk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_0655 SuturesNon-Absorb-Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_0771 Sutures Absorbable - Vicryl Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_0923 Sutures Absorbable - PDS Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_0924 Sutures Absorbable - Monocryl Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_0931 Dermabond Propen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_0932 Dermabond Propen XL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_7979 Dermabond - High Viscosity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_0925 Prolene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_0928 Ultrapro Hernia System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_0929 Mersilene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_0930 Vicryl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_0936 Securestrap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_0989 Physiomesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_7976 PHS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_7993 Vypro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_7995 Proceed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_7996 Ultrapro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_7554 Closed Wound Drains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_7715 Interceed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_7716 Intercoat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <description>Parent Product of a product if exists</description>
        <label>Product Group</label>
        <referenceTo>MyProduct__c</referenceTo>
        <relationshipLabel>Child Products</relationshipLabel>
        <relationshipName>ChildProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>Unique Indentification of a Product</description>
        <externalId>true</externalId>
        <label>Product Code</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Franchise__c</fullName>
        <label>Sub Franchise</label>
        <picklist>
            <controllingField>Franchise__c</controllingField>
            <picklistValues>
                <fullName>02_7973 Ethicon Prod Wound Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02_7917 Womens Health &amp; Urology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02_0525 Wound Management - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02_7575 BioSurgicals - WM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02_0470 Mentor Products</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <recordTypes>
        <fullName>Brand</fullName>
        <active>true</active>
        <description>Brand</description>
        <label>Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Group</fullName>
        <active>true</active>
        <description>Product Group</description>
        <label>Product Group</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>